data/all_generated_tests/raw_wast_tests/if_EdgeCaseFailuresinbr_table_2043.wast
;; 4. **Test Description**:     Implement an `if` block where the condition is false, and the `else` branch includes a `br_table` with zero index entries.    **Constraint**: Tests edge cases where `br_table` has no valid targets.    **Edge Case Relation**: Checks the handling of `br_table` that lacks any targets within an `else` branch.

(assert_invalid
  (module
    (func $test_br_table_else
      (if (result i32) (i32.const 0)
        (then (i32.const 1))
        (else (br_table 0))
      )
    )
  )
  "type mismatch"
)